errors.txt
In file included from shallow_water.cpp:18:
./Mesh.hpp:40:27: error: expected ';' at end of declaration list
        typedef unsigned idx_type
                                 ^
                                 ;
./Mesh.hpp:47:19: error: use of undeclared identifier 'TriGraph'
        typedef typename TriGraph::node_type tri_node;
                         ^
./Mesh.hpp:47:29: error: expected a qualified name after 'typename'
        typedef typename TriGraph::node_type tri_node;
                                   ^
./Mesh.hpp:47:38: error: expected ';' at end of declaration list
        typedef typename TriGraph::node_type tri_node;
                                            ^
                                            ;
./Mesh.hpp:48:19: error: use of undeclared identifier 'TriGraph'
        typedef typename TriGraph::edge_type tri_edge;
                         ^
./Mesh.hpp:48:29: error: expected a qualified name after 'typename'
        typedef typename TriGraph::edge_type tri_edge;
                                   ^
./Mesh.hpp:48:38: error: expected ';' at end of declaration list
        typedef typename TriGraph::edge_type tri_edge;
                                            ^
                                            ;
./Mesh.hpp:65:10: error: unknown type name 'Vertex'
        typedef Vertex vert_type;
                ^
./Mesh.hpp:96:3: error: unknown type name 'tri_edge'
                tri_edge dual_;
                ^
./Mesh.hpp:97:13: error: unknown type name 'tri_edge'
                edge_data(tri_edge dual) : dual_(dual) {}
                          ^
./Mesh.hpp:130:4: error: C++ requires a type specifier for all declarations
                        Node() {};
                        ^~~~
./Mesh.hpp:131:25: error: expected ';' at end of declaration list
                        const Point& position const {v_.position();}
                                             ^
                                             ;
./Mesh.hpp:240:36: error: unknown type name 'tri_node'
                Triangle(const Mesh* mesh, const tri_node tn) : mesh_(mesh), uid_(tn.index()) {}
                                                 ^
./Mesh.hpp:389:12: error: unknown type name 'Node'
                        typedef Node value_type;
                                ^
./Mesh.hpp:391:12: error: unknown type name 'Node'
                        typedef Node* pointer;
                                ^
./Mesh.hpp:393:12: error: unknown type name 'Node'
                        typedef Node& reference;
                                ^
./Mesh.hpp:400:4: error: C++ requires a type specifier for all declarations
                        NodeIterator() {
                        ^~~~~~~~~~~~
./Mesh.hpp:434:8: error: redefinition of 'VertexIterator'
        class VertexIterator : private totally_ordered<VertexIterator> {
              ^
./Mesh.hpp:385:8: note: previous definition is here
        class VertexIterator : private totally_ordered<VertexIterator> {
              ^
./Mesh.hpp:451:21: error: use of undeclared identifier 'TriGraph'
                        typedef typename TriGraph::NodeIterator tri_node_iterator;
                                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [shallow_water.o] Error 1
